# wisevision_core

./: Dockerfile  README.md  wisevision_core.repos
.github/workflows/: docker_images.yaml  ros2_test.yml  trigger_build_image.yml
wisevision_parser/: CMakeLists.txt  package.xml
wisevision_parser/include/wisevision_parser/: parser.hpp
wisevision_plugin_loader/: CMakeLists.txt  package.xml
wisevision_plugin_loader/include/wisevision_plugin_loader/: plugin_loader.hpp
wisevision_plugin_loader/src/: plugin_loader.cpp
